DE 1926 - Stop-gap for primeNg bug with Accordions

--- a/src/app/components/target-audience/online-audience-apio/online-audience-apio.component.css
+++ b/src/app/components/target-audience/online-audience-apio/online-audience-apio.component.css
@@ -2,3 +2,8 @@
   display: inline-block;
   padding-top: 7px;
 }
+
+.val-wide-search {
+  width: 90%;
+  padding-bottom: 3px;
+}
