--- a/src/app/components/target-audience/selected-audiences/selected-audiences.component.css
+++ b/src/app/components/target-audience/selected-audiences/selected-audiences.component.css
@@ -7,3 +7,7 @@
   text-align: center;
   width: 100%;
 }
+
+.val-card-no-margin {
+  margin-bottom: 0;
+}
